Add code to store eigenfaces for later computation

--- a/code/eigenface_optimization.ipynb
+++ b/code/eigenface_optimization.ipynb
@@ -216,11 +216,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computing 200 Eigenfaces\n"
+      "Computing 200 Eigenfaces\n",
+      "Finished Eigenfaces\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fdcc9d1a7eca410ab1349bd562360088"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing 250 Eigenfaces\n",
+      "Finished Eigenfaces\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "56ac1b522b3e44469f22f1ec318ab9f3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing 300 Eigenfaces\n",
+      "Finished Eigenfaces\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "bd093b99d2c94092abc8d913660f2d95"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "eigenface_dict = dict()\n",
     "accuracies = dict()\n",
     "\n",
     "for num_faces in range(50, 500, 50):\n",
@@ -230,6 +284,7 @@
     "    blue_eigenface_array, P_b, C_b, M_b, Y_b = eigenfaces(blue, num_faces)\n",
     "    print(\"Finished Eigenfaces\")\n",
     "\n",
+    "    eigenface_dict[num_faces] = ((red_eigenface_array, P_r, C_r, M_r, Y_r), (green_eigenface_array, P_g, C_g, M_g, Y_g), (blue_eigenface_array, P_b, C_b, M_b, Y_b))\n",
     "    accuracies[num_faces] = list()\n",
     "\n",
     "    for face in tqdm(range(100)):\n",
